# hackathon

./: .gitignore  DEMO_TUTORIAL.txt  README.md  package-lock.json  pyproject.toml
backend/: main.py  pyproject.toml  requirements.txt
backend/src/: app.py
backend/src/dependencies/: engines.py  repository.py  services.py  workflow_service.py
backend/src/gris/: README.md  __init__.py  example.py  gri_302_computations.py  gri_305_computations.py  gri_401_computations.py
backend/src/schemas/: input_schemas.py  output_schemas.py  workflow_schemas.py
backend/src/schemas/MetricsSchemas/: GRI_305_Metrics.py  GRI_401_Metrics.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/charts/: CarbonBarChart.tsx  EnergyLineChart.tsx  WasteDonutChart.tsx
frontend/src/components/dashboard/: MetricCard.tsx  OnboardingCard.tsx  QuickActions.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  (+2 more)
frontend/src/pages/: Dashboard.tsx  DataInput.tsx  LandingPage.tsx  LoginPage.tsx  MonthlyCheckup.tsx  OnePlan.tsx  Reports.tsx  ResponseLibrary.tsx  Settings.tsx
frontend/src/stores/: themeStore.ts
frontend/src/types/: esg.ts  workflow.ts
src/: app.py  process_esg.py
src/dependencies/: engines.py  services.py
src/gris/: gri_305_computations.py
src/schemas/: output_schemas.py
src/schemas/MetricsSchemas/: GRI_302_Metrics.py  GRI_305_Metrics.py  GRI_401_Metrics.py
(+1 files in other folders)
