[project]
name = "esg-enerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"fastapi>=0.115.0",
	"google-genai>=1.0.0",
	"pydantic>=2.10.0",
	"python-dotenv>=1.0.1",
	"python-multipart>=0.0.9",
	"openpyxl>=3.1.5",
	"uvicorn>=0.30.6",
]
